@@ -284,6 +284,12 @@ but you may need them for particular sites.
 <dl>
 
 <dt>
+  allow_dup_titles
+<dd>
+  Some feeds, like the Los Alamos Daily Post's Legal Notices page,
+  have no useful titles, and only the link is the decider on whether
+  an entry is new. This defaults to false, which should suit most sites.
+<dt>
   cookiefile
 <dd>
   For this site, use cookies from a specific browser profile.
