@@ -7,4 +7,5 @@ page_end = <span class="elementor-screen-only">Search</span>
 skip_images = true
 # allow_gzip = false
 simplify_rss = true
+allow_dup_titles = true
 
