@@ -1,3 +1,8 @@
+2024-08-22  Akkana Peck  <akkana@shallowsky.com>
+	New config variable allow_dup_titles.
+	Allow guid as unique id.
+	Accept <link> as well as <links>.
+
 2024-02-12  Akkana Peck  <akkana@shallowsky.com>
 	Add html_index_links, an option that allows feeding from an
 	HTML page rather than RSS/Atom.
